--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+h1{
+  font-family: 'Alex Brush', cursive;
+}
+
+h2 {
+  font-size: larger;
+  font-weight: 500;
+  font-style: italic;
+}
+
+h3 {
+  font-family: 'Patrick Hand SC', cursive;
+}
+
+h4 {
+  font-family: 'EB Garamond', serif;
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 229, 231, 233;
+  --background-start-rgb: 0, 101, 147;
+  --background-mid-rgb: 100, 100, 100;
+  --background-end-rgb: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --foreground-rgb: 229, 231, 233;
+    --background-start-rgb: 217, 217, 217;
+    --background-mid-rgb: 100, 100, 100;
     --background-end-rgb: 0, 0, 0;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+.animate-logo {
+  position: relative;
+  animation: animate 8s infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);  }
+
+  50% {
+    transform: scale(0.95);  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
